RESOLVED FIXED25322
Can't delete empty paragraph after a block image
https://bugs.webkit.org/show_bug.cgi?id=25322
Summary Can't delete empty paragraph after a block image
Justin Garcia
Reported 2009-04-21 20:00:50 PDT
Put the caret in an empty paragraph after a block image and hit delete. Caret just moves up. Should just move up if there is text after the image (since text can't be made inline with a block image) but I think that an empty paragraph should go away. <rdar://problem/6808229>
Attachments
patch (9.30 KB, patch)
2009-04-22 01:08 PDT, Justin Garcia
darin: review+
Justin Garcia
Comment 1 2009-04-22 01:08:09 PDT
Justin Garcia
Comment 2 2009-04-22 17:55:09 PDT
Note You need to log in before you can comment on or make changes to this bug.